feat: обновление гостей
